--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -50,6 +49,10 @@
     "eslit": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "msw": "^1.3.0",
     "prettier": "^3.0.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
