--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -3,26 +3,26 @@ name: CI/CD
 on:
   push:
     branches:
-    - master
+      - master
 
 jobs:
   cicd:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        ref: "master"
-    - run: npm ci
-    - run: npm run test
-    - run: npm run build
-    # s3 upload
+      - uses: actions/checkout@v3
+        with:
+          ref: 'master'
+      - run: npm ci
+      - run: npm run test
+      - run: npm run build
+      # s3 upload
       # aws cli
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --delete
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'ap-northeast-2'
-        SOURCE_DIR: ${{ secrets.AWS_SOURCE_DIR }}
+      - uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'ap-northeast-2'
+          SOURCE_DIR: ${{ secrets.AWS_SOURCE_DIR }}
